Improved Android selection functionality

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                 <input type="checkbox" value="AMP" id="amp"> AMP<br>
                 <input type="checkbox" value="FIA" id="fia"> FIA<br>
                 <input type="checkbox" value="Android" id="android"> Android<br>
+                <ul class="input-list">
+                    <li><input type="checkbox" value="Kotlin" id="kotlin"> Kotlin<br></li>
+                    <li><input type="checkbox" value="Java" id="java"> Java<br></li>
+                </ul>
                 <input type="checkbox" value="iOS" id="ios"> iOS<br>
             <h3>What extras are needed for the deployment?</h3>
                 <input type="checkbox" value="Consent" id="consent"> Consent<br>
                 <input type="checkbox" value="DFP Access" id="dfp"> DFP Access<br>
-                <ul class="input-list">
-                    <!-- <li><input type="checkbox" value="Kotlin" id="kotlin"> Kotlin<br></li>
-                    <li><input type="checkbox" value="Java" id="java"> Java<br></li> -->
-                </ul>
             <!-- <h3>What is the ad-slot size?</h3>
             <div class="ad-drop">
                 <select class="custom-select" id="ad-size">
