--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <body>
     <header>
         <div class="header one-edge-shadow">
-            <h1 class="brand-logo"><img src="/images/logo-permutive.svg" alt="Permutive Logo"></h1>
+            <h1 style="float: left;">Deployment Document Generator</h1>
+            <h1 class="brand-logo" style="float:right; padding-right: 20px;"><img src="/images/logo-permutive.svg" alt="Permutive Logo"></h1>
             <div class="header-right">
             </div>
         </div>
