Ad Server update

--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
                     <li><input type="checkbox" value="Java" id="java"> Java<br></li>
                 </ul>
                 <input type="checkbox" value="iOS" id="ios"> iOS<br>
-            <h3>What extras are needed for the deployment?</h3>
-                <input type="checkbox" value="Consent" id="consent"> Consent<br>
-                <input type="checkbox" value="DFP Access" id="dfp"> DFP Access<br>
+                <h3>Which Ad Servers do you want to integrate with?</h3>
+                    <input type="checkbox" value="Google" id="googleas"> Google<br>
+                    <input type="checkbox" value="AppNexus" id="appnexusas"> AppNexus<br>
+                <h3>Are there any extras needed for the deployment?</h3>
+                    <input type="checkbox" value="Consent" id="consent"> Consent<br>
+                    <input type="checkbox" value="DFP Access" id="dfp"> DFP Access<br>
+                    <input type="checkbox" value="AppNexus Access" id="appnexus"> AppNexus Access<br>
             <!-- <h3>What is the ad-slot size?</h3>
             <div class="ad-drop">
                 <select class="custom-select" id="ad-size">
