Added in Android Ad Sever info

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="column">
             <h2>Fill out the information for the Deployment Document</h2>
             <div class="custom-input" style="display: block;">
-                <h3>What is the client Name?</h3>
+                <h3>What is the client name?</h3>
                 <input id="client-input" class="text-input" placeholder="Enter the client name here">
             </div>
             <div class="custom-input" style="display: block;">
