Updated homepage link in the logo

--- a/ad_surveys/index.html
+++ b/ad_surveys/index.html
@@ -22,7 +22,7 @@
         <header>
             <div class="header one-edge-shadow">
                 <h1 style="float: left;">Survey in Ad Slot Generator</h1>
-                <h1 class="brand-logo" style="float:right; padding-right: 20px;"><img src="/Deployment Doc Generator/images/logo-permutive.svg" alt="Permutive Logo"></h1>
+                <h1 class="brand-logo" style="float:right; padding-right: 20px;"><a href="/index.html"><img src="/Deployment Doc Generator/images/logo-permutive.svg" alt="Permutive Logo"></a></h1>
                 <div class="header-right">
                 </div>
             </div>
