Update to GIF window

--- a/Deployment Doc Generator/index.html
+++ b/Deployment Doc Generator/index.html
@@ -114,7 +114,7 @@
         <div class="modal-content">
           <span class="close">&times;</span>
           
-          <img src="" id="giphy" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
+          <img src="" id="giphy" style="display: block; margin-left: auto; margin-right: auto; width: auto; max-height: 230px;">
           <!-- <img src="https://thumbs.gfycat.com/AggressiveWebbedCormorant-small.gif" id="giphy" style="display: block; margin-left: auto; margin-right: auto; width: 50%;"> -->
           <h2 style="vertical-align: middle;margin-left: auto; margin-right: auto; width: 60%; display: block; height: 30px;">Successfully copied to clipboard!</h2>
         </div>
