Updated home page descriptions

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       
       <div class="content">
         <h1><a href="/Deployment Doc Generator/index.html">Deployment Document Generator</a></h1>
-        <p>Lorem ipsum...</p>
+        <p>You can use this tool to automcatically create deployment documents. Once you press 'Submit' just open up a Notion document and paste!</p>
         <h1><a href="/ad_surveys/index.html">Survey in Ad Slot Generator</a></h1>
-        <p>Lorem ipsum...</p>
+        <p>You can use this tool to provide clients with a code snippet that they can then use to paste into Google Ad Manager.</p>
         <!-- Use a button to pause/play the video with JavaScript -->
       </div>
 </body>
