Added in Objective C functionality

--- a/Deployment Doc Generator/index.html
+++ b/Deployment Doc Generator/index.html
@@ -64,11 +64,15 @@
                 <input type="checkbox" value="AMP" id="amp"> AMP<br>
                 <input type="checkbox" value="FIA" id="fia"> FIA<br>
                 <input type="checkbox" value="Android" id="android"> Android<br>
-                <ul class="input-list">
+                <ul class="input-list-android">
                     <li><input type="checkbox" value="Kotlin" id="kotlin"> Kotlin<br></li>
                     <li><input type="checkbox" value="Java" id="java"> Java<br></li>
                 </ul>
                 <input type="checkbox" value="iOS" id="ios"> iOS<br>
+                <ul class="input-list-ios">
+                    <li><input type="checkbox" value="Swift" id="swift"> Swift<br></li>
+                    <li><input type="checkbox" value="Objective C" id="objective-c"> Objective C<br></li>
+                </ul>
                 <h3>Which Ad Servers do you want to integrate with?</h3>
                     <input type="checkbox" value="Google" id="googleas"> Google<br>
                     <input type="checkbox" value="AppNexus" id="appnexusas"> AppNexus<br>
