Ability to delete domains

--- a/Deployment Doc Generator/index.html
+++ b/Deployment Doc Generator/index.html
@@ -44,8 +44,8 @@
             </div>
             <div class="custom-input" style="display: block;">
                 <h3>What are the deployment domains?</h3>
-                <input id="domains-input" class="text-input" style="width: calc(85% - 65px)" placeholder="Enter the domain and then press enter">
-                <button style="position: absolute; margin-top: 1px;" class="submit" id="domain-btn">Submit</button>
+                <input id="domains-input" class="text-input" style="width: calc(85% - 80px)" placeholder="Enter the domain and then press enter">
+                <button style="position: absolute; margin-top: 0; margin-left: 15px;" class="submit" id="domain-btn">Submit</button>
                 <ul id="domains-list"></ul>
             </div>
             <div class="custom-input" style="display: block;">
