Dashboard and ITP solutions update

--- a/Deployment Doc Generator/index.html
+++ b/Deployment Doc Generator/index.html
@@ -56,6 +56,10 @@
                 <h3>What is the API key?</h3>
                 <input id="apikey-input" class="text-input" placeholder="Enter the public API key here">
             </div>
+            <div class="custom-input" style="display: block;">
+                <h3>What is the Event Dashboard ID?</h3>
+                <input id="dashboard-input" class="text-input" placeholder="Enter the Event Dashboard ID here">
+            </div>
             <h3>What custom properties are needed?</h3>
                 <input type="checkbox" value="Type" id="type"> Type<br>
                 <input type="checkbox" value="Content" id="content"> Content<br>
@@ -81,6 +85,8 @@
                     <input type="checkbox" value="Consent" id="consent"> Consent<br>
                     <input type="checkbox" value="DFP Access" id="dfp"> DFP Access<br>
                     <input type="checkbox" value="AppNexus Access" id="appnexus"> AppNexus Access<br>
+                    <input type="checkbox" value="ITP Identity" id="identity-solution"> ITP Identity Solution<br>
+                    <input type="checkbox" value="CNAME solution" id="cname-solution"> ITP CNAME'ing Solution<br>
             <button class="submit" id="submit-btn">Submit</button>
             <button style="margin-left: 20px;" class="submit" id="copy-btn">Copy JSON</button>
             <button style="margin-left: 20px;" class="submit" id="dwnld-btn">Download JSON</button>
