Alpha launch for the Swagger Generator
- Basic functionality for generating Swagger Schema
- Ability to load in existing project schema to generate the schema
- Ability to create the schema using the property builder tree

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       </div>
       
       <div class="content">
+        <h1><a href="/Swagger Generator/index.html">Swagger Generator (Alpha)</a></h1>
+        <p>You can use this tool to automcatically create Swagger JSON to use to update and create schema.</p>
         <h1><a href="/Deployment Doc Generator/index.html">Deployment Document Generator</a></h1>
         <p>You can use this tool to automcatically create deployment documents. Once you press 'Submit' just open up a Notion document and paste!</p>
         <h1><a href="/ad_surveys/index.html">Survey in Ad Slot Generator</a></h1>
