Client and Copy functionality
- Implemented the functionality to Copy the JSON directly to the clipboard when 'copy' is pressed
- Ability to add in the 'Client' Object to the schema as this is needed for all client side track events.

--- a/Swagger Generator/index.html
+++ b/Swagger Generator/index.html
@@ -35,7 +35,7 @@
     </header>
     <div class="container">
       <div class="column">
-        <h2>Fill out the information for the Swaagger snippet</h2>
+        <h2>Fill out the information for the Swagger snippet</h2>
 
         <h3>What custom properties are needed?</h3>
         <input type="checkbox" value="Type" id="type" /> Type<br />
@@ -43,6 +43,7 @@
         <input type="checkbox" value="Article" id="article" /> Article<br />
         <input type="checkbox" value="User" id="user" /> User<br />
         <input type="checkbox" value="Watson" id="watson" /> Watson<br />
+        <input type="checkbox" value="Client" id="client" /> Client<br />
         
         <button class="submit" id="submit-btn">Submit</button>
         <button style="margin-left: 20px;" class="submit" id="copy-btn">
