--- a/Swagger Generator/index.html
+++ b/Swagger Generator/index.html
@@ -42,8 +42,10 @@
         <input type="checkbox" value="Content" id="content" /> Content<br />
         <input type="checkbox" value="Article" id="article" /> Article<br />
         <input type="checkbox" value="User" id="user" /> User<br />
-        <input type="checkbox" value="Watson" id="watson" /> Watson<br />
+        <!-- <input type="checkbox" value="Watson" id="watson" /> Watson<br /> -->
         <input type="checkbox" value="Client" id="client" /> Client<br />
+        <input type="checkbox" value="ISP" id="isp" /> ISP<br />
+        <input type="checkbox" value="Geo" id="geo" /> Geo<br />
         
         <button class="submit" id="submit-btn">Submit</button>
         <button style="margin-left: 20px;" class="submit" id="copy-btn">
