--- a/Swagger Generator/index.html
+++ b/Swagger Generator/index.html
@@ -86,7 +86,7 @@
       </div>
       <div class="column">
         <h2>Extra custom data points</h2>
-        <h3>PageView</h3>
+        <h3>Event Schema</h3>
         <ul id="properties-propertyData"></ul>
         <button class="add-property" id="add-property">+ Add property</button>
       </div>
