--- a/index.html
+++ b/index.html
@@ -409,8 +409,7 @@
                             <a href="./pubmatic-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
                         <div>
-                            <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">PubMatic
-                                Video</strong>
+                            <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">PubMatic Video</strong>
                             <a href="./pubmatic-video-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
                     </div>
