--- a/tesco-demo/public/index.html
+++ b/tesco-demo/public/index.html
@@ -1224,7 +1224,7 @@
   </script>
 
   <script>
-    const API_ENDPOINT = 'http://localhost:3000/api/sponsored-products';
+    const API_ENDPOINT = 'https://mais-kassam.github.io/api/sponsored-products';
 
     const requestPayload = {
       "id": "BidRequestIDd_01_00234",
