--- a/walmart-demo/public/index.html
+++ b/walmart-demo/public/index.html
@@ -1168,7 +1168,7 @@
     cnvrtpbjs.que = cnvrtpbjs.que || [];
     var customkeys = { TargetingParams: {} };
 
-    var API_BASE_URL = 'http://localhost:3000';
+    var API_BASE_URL = 'https://mais-kassam.github.io';
     var API_ENDPOINT = API_BASE_URL + '/api/sponsored-products';
 
     var regularProducts = [
