--- a/uber-demo/public/index.html
+++ b/uber-demo/public/index.html
@@ -591,7 +591,7 @@
 
   <script>
     // API Configuration
-    const API_URL = 'http://localhost:3002/api/onsite-bid';
+    const API_URL = 'https://pubmatic-proxy-server.fly.dev/api/onsite-bid';
 
     // Bid Request Payload with Enhanced Metadata
     const bidRequest = {
