Updated API Base to fly.dev domain

--- a/grocery-site/public/index.html
+++ b/grocery-site/public/index.html
@@ -335,7 +335,7 @@
     const trackingEvents = [];
 
     // Configuration - change this if your server runs on a different port
-    const API_BASE_URL = window.location.origin;
+    const API_BASE_URL = 'https://pubmatic-proxy-server.fly.dev';
     const API_ENDPOINT = `${API_BASE_URL}/api/sponsored-products`;
 
     const requestPayload = {
