--- a/pubmatic-demo/public/index.html
+++ b/pubmatic-demo/public/index.html
@@ -968,7 +968,7 @@
     });
 
     // Product Data
-    const API_BASE_URL = 'https://mais-kassam.github.io';
+    const API_BASE_URL = 'https://pubmatic-proxy-server.fly.dev';
     const API_ENDPOINT = `${API_BASE_URL}/api/sponsored-products`;
 
     const regularProducts = [
