Removing Pubmatic Video from Demo Homepage

--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">PubMatic</strong>
                             <a href="./pubmatic-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
-                        <div>
+                        <!-- <div>
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">PubMatic Video</strong>
                             <a href="./pubmatic-video-demo/public/index.html" class="demo-link">View Demo</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
