--- a/tesco-demo/public/index.html
+++ b/tesco-demo/public/index.html
@@ -1065,7 +1065,7 @@
   <header class="header">
     <div class="header-main">
       <a href="#" class="logo">
-        <img src="/tesco-logo.png" alt="Tesco"
+        <img src="/tesco-demo/public/tesco-logo.png" alt="Tesco"
           onerror="this.parentElement.innerHTML='<div style=\'color:#00539F;font-size:2rem;font-weight:bold;\'>TESCO</div>'">
       </a>
       <div class="search-container">
