Coop logo and Update Demo Homepage

--- a/coop-demo/public/index.html
+++ b/coop-demo/public/index.html
@@ -756,7 +756,7 @@
       <div class="container">
         <div class="header-content">
           <a href="#" class="logo">
-            <img src="/coop-logo.png" alt="Co-op" onerror="this.style.display='none'">
+            <img src="/coop-demo/public/coop-logo.png" alt="Co-op" onerror="this.style.display='none'">
           </a>
           <div class="search-bar">
             <input type="text" class="search-input" placeholder="Search products...">
