--- a/index.html
+++ b/index.html
@@ -360,10 +360,6 @@
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Albertsons</strong>
                             <a href="./albertsons-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
-                        <div>
-                            <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Grocery Site</strong>
-                            <a href="./grocery-site/public/index.html" class="demo-link">View Demo</a>
-                        </div>
                     </div>
                     <div class="demo-grid-two" style="margin-top: 1.5rem;">
                         <div>
@@ -407,6 +403,11 @@
                         <div>
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">PubMatic</strong>
                             <a href="./pubmatic-demo/public/index.html" class="demo-link">View Demo</a>
+                        </div>
+                        <div>
+                            <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Sponsored Product
+                                API</strong>
+                            <a href="./grocery-site/public/index.html" class="demo-link">View Demo</a>
                         </div>
                         <!-- <div>
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">PubMatic Video</strong>
