--- a/index.html
+++ b/index.html
@@ -360,12 +360,12 @@
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Albertsons</strong>
                             <a href="./albertsons-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
-                    </div>
-                    <div class="demo-grid-two" style="margin-top: 1.5rem;">
                         <div>
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Tesco</strong>
                             <a href="./tesco-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
+                    </div>
+                    <div>
                         <div>
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Walmart</strong>
                             <a href="./walmart-demo/public/index.html" class="demo-link">View Demo</a>
