--- a/index.html
+++ b/index.html
@@ -365,16 +365,17 @@
                             <a href="./tesco-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
                     </div>
-                    <div>
+                    <div class="demo-grid-two">
                         <div>
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Walmart</strong>
                             <a href="./walmart-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
+                        <div style="margin-top: 1.5rem;">
+                            <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Co-op</strong>
+                            <a href="./coop-demo/public/index.html" class="demo-link">View Demo</a>
+                        </div>
                     </div>
-                    <div style="margin-top: 1.5rem;">
-                        <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Co-op</strong>
-                        <a href="./coop-demo/public/index.html" class="demo-link">View Demo</a>
-                    </div>
+
                 </div>
 
                 <!-- Mobility & Delivery -->
