--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                         </div>
                     </div>
                     <div class="demo-grid-two">
-                        <div>
+                        <div style="margin-top: 1.5rem;">
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Walmart</strong>
                             <a href="./walmart-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
