--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
             gap: 1.5rem;
         }
 
+        /* Demo item wrapper */
+        .demo-item {
+            /* Consistent spacing for all items */
+        }
+
         /* Stats Section */
         .stats-section {
             background: rgba(255, 255, 255, 0.05);
@@ -356,26 +361,23 @@
                         and integrated commerce media capabilities.
                     </p>
                     <div class="demo-grid-two">
-                        <div>
+                        <div class="demo-item">
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Albertsons</strong>
                             <a href="./albertsons-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
-                        <div>
+                        <div class="demo-item">
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Tesco</strong>
                             <a href="./tesco-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
-                    </div>
-                    <div class="demo-grid-two">
-                        <div style="margin-top: 1.5rem;">
+                        <div class="demo-item">
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Walmart</strong>
                             <a href="./walmart-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
-                        <div style="margin-top: 1.5rem;">
+                        <div class="demo-item">
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Co-op</strong>
                             <a href="./coop-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
                     </div>
-
                 </div>
 
                 <!-- Mobility & Delivery -->
@@ -386,7 +388,7 @@
                         location-based
                         advertising, journey-based targeting, and real-time customer acquisition strategies.
                     </p>
-                    <div style="margin-top: 1.5rem;">
+                    <div class="demo-item">
                         <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Uber</strong>
                         <a href="./uber-demo/public/index.html" class="demo-link">View Demo</a>
                     </div>
@@ -401,19 +403,15 @@
                         and full transparency across video, CTV, OTT, and digital formats.
                     </p>
                     <div class="demo-grid-two">
-                        <div>
+                        <div class="demo-item">
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">PubMatic</strong>
                             <a href="./pubmatic-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
-                        <div>
+                        <div class="demo-item">
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Sponsored Product
                                 API</strong>
                             <a href="./grocery-site/public/index.html" class="demo-link">View Demo</a>
                         </div>
-                        <!-- <div>
-                            <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">PubMatic Video</strong>
-                            <a href="./pubmatic-video-demo/public/index.html" class="demo-link">View Demo</a>
-                        </div> -->
                     </div>
                 </div>
             </div>
