--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         </div>
                         <div class="demo-item">
                             <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Carrefore</strong>
-                            <a href="./carrefore-demo/index.html" class="demo-link">View Demo</a>
+                            <a href="./carrefore-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
                     </div>
                 </div>
