--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                             <a href="./coop-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
                         <div class="demo-item">
-                            <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Carrefore</strong>
-                            <a href="./carrefore-demo/public/index.html" class="demo-link">View Demo</a>
+                            <strong style="display: block; margin-bottom: 0.5rem; color: #0a2540;">Carrefour</strong>
+                            <a href="./carrefour-demo/public/index.html" class="demo-link">View Demo</a>
                         </div>
                     </div>
                 </div>
